--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,10 @@
 <body>
   <h1>Hello</h1>
   <p>asdasd</p>
+  <nav>
+    <li><a href="#">Link 1</a></li>
+    <li><a href="#">Link 2</a></li>
+    <li><a href="#">Link 3</a></li>
+  </nav>
 </body>
 </html>
