--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
   <h1>Hello</h1>
   <p>asdasd</p>
   <nav>
-    <li><a href="#">Link 1</a></li>
-    <li><a href="#">Link 2</a></li>
-    <li><a href="#">Link 3</a></li>
+    <li><a href="/">Home</a></li>
+    <li><a href="/products">Products</a></li>
+    <li><a href="/contact">Contact</a></li>
   </nav>
 </body>
 </html>
