--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <li><a href="/">Home</a></li>
     <li><a href="/products">Products</a></li>
     <li><a href="/contact">Contact</a></li>
+    <li><a href="/team">Team</a></li>
   </nav>
 </body>
 </html>
