--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <p>asdasd</p>
   <nav>
     <li><a href="/">Home </a></li>
-    <li><a href="/products">Worshop</a></li>
+    <li><a href="/products">Workshop</a></li>
     <li><a href="/contact">Contact</a></li>
     <li><a href="/team">Team</a></li>
   </nav>
