--- a/src/contact.html
+++ b/src/contact.html
@@ -21,8 +21,31 @@
     <script>
         document.getElementById('contactForm').addEventListener('submit', function(event) {
             event.preventDefault();
-            // Add form validation or submission logic here
+            
+            const name = document.getElementById('name').value.trim();
+            const email = document.getElementById('email').value.trim();
+            const message = document.getElementById('message').value.trim();
+            const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+
+            if (!name) {
+                alert('Please enter your name.');
+                return;
+            }
+
+            if (!email || !emailPattern.test(email)) {
+                alert('Please enter a valid email address.');
+                return;
+            }
+
+            if (!message) {
+                alert('Please enter your message.');
+                return;
+            }
+
+            // If all validations pass, submit the form
             alert('Form submitted successfully!');
+            // Uncomment the line below to actually submit the form
+            // this.submit();
         });
     </script>
 </body>
