--- a/src/contact.html
+++ b/src/contact.html
@@ -34,7 +34,7 @@
             border-radius: 5px;
         }
         input[type="submit"] {
-            background-color: #4CAF50;
+            background-color: #18681b;
             color: white;
             padding: 10px 20px;
             border: none;
