--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <li><a href="/">Home </a></li>
     <li><a href="/products">Workshop</a></li>
     <li><a href="/contact">Contact</a></li>
-    <li><a href="/team">Team</a></li>
+    <li><a href="/team2">Team</a></li>
   </nav>
 </body>
 </html>
